<resources>
    <string name="app_name">EDL Dashboard</string>
    <string name="tools">Tools</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="settings">Settings</string>
    <string name="units_speed">MPH</string>
    <string name="LeftBlink">Left Blinker</string>
    <string name="RightBlink">Right Blinker</string>
    <string name="OilWarn">Oil Warning</string>
    <string name="tripreset">Reset Trip</string>
    <string name="lambda">&#955;</string>
    <string name="zero">0</string>
    <string name="o2_sensor_man">O2 Sensor (Man)</string>
    <string name="question">?</string>
    <string name="need_permissions">Location permissions are needed for bluetooth and GPS speed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_header">Settings</string>
    <string name="keyless_title">Keyless Ignition Device</string>
    <string name="keyless_key_title">Keyless Pairing Key</string>
    <string name="keyless_header">Keyless Ignition</string>
    <string name="hamburger_description">Hamburger Menu</string>
    <string name="logreset">Start new Log File</string>
</resources>
