<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_fullscreen"
            android:icon="@drawable/ic_fullscreen_black_24dp"
            android:title="@string/fullscreen" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log_reset"
            android:icon="@mipmap/trip_reset_round"
            android:title="@string/logreset" />
        <item
            android:id="@+id/nav_trip_reset"
            android:icon="@mipmap/trip_reset_round"
            android:title="@string/tripreset" />
    </group>
    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/o2_sensor"
            android:title="@string/o2_sensor_man" />
    </group>
</menu>